RESOLVED FIXED223015
REGRESSION (r274174): ASSERTION FAILED: m_shouldBeCalledOnMainThread == isMainThread() under WebKit::RemoteSampleBufferDisplayLayerManager::createLayer
https://bugs.webkit.org/show_bug.cgi?id=223015
Summary REGRESSION (r274174): ASSERTION FAILED: m_shouldBeCalledOnMainThread == isMai...
Ryan Haddad
Reported 2021-03-09 20:28:07 PST
Layout tests are exiting early on iOS and macOS debug bots due to assertion failures seem with media stream and WebRTC tests ASSERTION FAILED: m_shouldBeCalledOnMainThread == isMainThread() /Volumes/Data/worker/bigsur-debug/build/WebKitBuild/Debug/usr/local/include/wtf/CompletionHandler.h(65) : Out WTF::CompletionHandler<void (WTF::Optional<unsigned int>)>::operator()(In...) 1 0x14292be49 WTFCrash 2 0x11690e91b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x117514763 WTF::CompletionHandler<void (WTF::Optional<unsigned int>)>::operator()(WTF::Optional<unsigned int>) 4 0x1175180ea auto WebKit::RemoteSampleBufferDisplayLayerManager::createLayer(WTF::ObjectIdentifier<WebKit::SampleBufferDisplayLayerIdentifierType>, bool, WebCore::IntSize, WTF::CompletionHandler<void (WTF::Optional<unsigned int>)>&&)::$_4::operator()()::'lambda'(auto)::operator()<WTF::Optional<unsigned int> >(auto)::'lambda'()::operator()() 5 0x117517eae WTF::Detail::CallableWrapper<auto WebKit::RemoteSampleBufferDisplayLayerManager::createLayer(WTF::ObjectIdentifier<WebKit::SampleBufferDisplayLayerIdentifierType>, bool, WebCore::IntSize, WTF::CompletionHandler<void (WTF::Optional<unsigned int>)>&&)::$_4::operator()()::'lambda'(auto)::operator()<WTF::Optional<unsigned int> >(auto)::'lambda'(), void>::call() 6 0x142957342 WTF::Function<void ()>::operator()() const 7 0x1429d95f5 WTF::RunLoop::performWork() 8 0x1429ddeb1 WTF::RunLoop::performWork(void*) 9 0x7fff2046da0c __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 10 0x7fff2046d974 __CFRunLoopDoSource0 11 0x7fff2046d6ef __CFRunLoopDoSources0 12 0x7fff2046c121 __CFRunLoopRun 13 0x7fff2046b6ce CFRunLoopRunSpecific 14 0x7fff211f8fa1 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 15 0x7fff21287384 -[NSRunLoop(NSRunLoop) run] 16 0x7fff200c23dd _xpc_objc_main 17 0x7fff200c1e65 _xpc_copy_xpcservice_dictionary 18 0x1176f097c WebKit::XPCServiceMain(int, char const**) 19 0x118d513db WKXPCServiceMain 20 0x10d06eea2 main 21 0x7fff20390621 start 22 0x1 https://build.webkit.org/results/Apple-BigSur-Debug-WK2-Tests/r274188%20(615)/results.html
Attachments
Patch (2.28 KB, patch)
2021-03-09 20:42 PST, Chris Dumez
no flags
Ryan Haddad
Comment 1 2021-03-09 20:28:35 PST
Radar WebKit Bug Importer
Comment 2 2021-03-09 20:28:45 PST
Chris Dumez
Comment 3 2021-03-09 20:36:07 PST
Looking.
Chris Dumez
Comment 4 2021-03-09 20:42:35 PST
Chris Dumez
Comment 5 2021-03-09 20:45:57 PST
Comment on attachment 422793 [details] Patch Clearing flags on attachment: 422793 Committed r274194 (235112@main): <https://commits.webkit.org/235112@main>
Chris Dumez
Comment 6 2021-03-09 20:45:59 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.