REGRESSION (r274174): ASSERTION FAILED: m_shouldBeCalledOnMainThread == isMainThread() under WebKit::RemoteSampleBufferDisplayLayerManager::createLayer https://bugs.webkit.org/show_bug.cgi?id=223015 <rdar://problem/75248289>

Unreviewed, r274174 mistakenly replaced a call to dispatchToThread() with a call to callOnMainRunLoop().

* GPUProcess/webrtc/RemoteSampleBufferDisplayLayerManager.cpp:
(WebKit::RemoteSampleBufferDisplayLayerManager::createLayer):

Canonical link: https://commits.webkit.org/235112@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274194 268f45cc-cd09-0410-ab3c-d52691b4dbfc